Добавил scss-блоки

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  margin: 30px;
+
 }
 
 .features__list {
@@ -9,5 +9,5 @@
 }
 
 .features__list li {
-  padding: 50px 0px 15px 0px;
+  padding: 50px 0 15px;
 }
