--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -3,10 +3,8 @@
 }
 
 .category__item {
-  padding-right: 30px;
+  padding: 28px 150px 28px 30px;
   font-weight: 700;
-  width: 100%;
-  height: 80px;
 }
 
 .category__item--01 {
