--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -1,13 +1,5 @@
 .header__nav li {
   margin: 0;
   border-bottom: 2px solid grey;
-}
-
-.nav__item {
-  display: block;
-  font-weight: 700;
-  vertical-align: middle;
-  padding-left: 80px;
-  height: 80px;
-  width: 100%;
+  // padding-left: 80px;
 }
