--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -7,4 +7,13 @@
 
 .main__title {
   background-color: grey;
+  padding: 50px 30px;
+  margin: 0;
+  font-size: 25px;
+  text-align: center;
+}
+
+.main__manufacturing {
+  padding: 30px;
+  font-size: 15px;
 }
