--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,13 +2,22 @@
 @import "fonts.scss";
 @import "mixins.scss";
 @import "scaffolding.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/btn.scss";
+@import "blocks/nav.scss";
 @import "blocks/header.scss";
 @import "blocks/logo-wrapper.scss";
 @import "blocks/header-nav.scss";
-@import "main.scss";
+@import "blocks/main.scss";
 @import "blocks/site-theme.scss";
 @import "blocks/category.scss";
 @import "blocks/product.scss";
+@import "blocks/about-us.scss";
 @import "blocks/features.scss";
 @import "blocks/footer.scss";
-@import "blocks/catalog.scss"
+@import "blocks/catalog.scss";
+@import "blocks/card.scss";
+@import "blocks/popup.scss";
+@import "blocks/manufacturing.scss";
+@import "blocks/form.scss";
+@import "blocks/fieldset.scss";
