--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,12 +1,13 @@
 .main {
   font-weight: 400;
 }
+
 .main__site-theme {
   background-color: #fff;
 }
 
 .main__title {
-  background-color: grey;
+  background-color: #f1f1f1;
   padding: 50px 30px;
   margin: 0;
   font-size: 25px;
@@ -14,6 +15,6 @@
 }
 
 .main__manufacturing {
-  padding: 30px;
   font-size: 15px;
+  margin: 30px 30px 30px 30px;
 }
