--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,7 @@
 .form {
   margin: 0px;
   padding: 30px;
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .form__description {
@@ -11,4 +11,19 @@
 
 .form__input-text {
   width: 100%;
+}
+
+.form__radio,
+.form__input {
+  display: none;
+}
+
+.form__note {
+  font-size: 14px;
+  text-align: center;
+}
+
+.form__btn {
+  width: 100%;
+  background-color: #fff;
 }
