--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,6 @@
 @import "blocks/manufacturing.scss";
 @import "blocks/form.scss";
 @import "blocks/fieldset.scss";
+@import "blocks/feedback.scss";
+@import "blocks/container-btn.scss";
+@import "blocks/contacts.scss";
