Продолжаем стилизацыю: правлю Трэвиса

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,5 @@
 .form {
-  margin: 0px;
+  margin: 0;
   padding: 30px;
   font-size: 17px;
 }
@@ -25,5 +25,5 @@
 
 .form__btn {
   width: 100%;
-  background-color: #fff;
+  background-color: #ffffff;
 }
