--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -4,7 +4,7 @@
   text-transform: uppercase;
   border: 2px solid #333333;
   display: block;
-  padding: 20px 0px;
+  padding: 20px 0;
   font-weight: 700;
 }
 
