--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -11,7 +11,7 @@
 }
 
 .card:active {
-  box-shadow: 0px 3px 5px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 .card__description {
