--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -15,25 +15,24 @@
   margin: 15px 0;
   width: 100%;
   display: block;
-
 }
 
 .form__lbl-checbx {
   padding-left: 64px;
 }
 
-.fieldset input[type=text],
-.fieldset input[type=tel],
-.fieldset input[type=email] {
+.fieldset input[type="text"],
+.fieldset input[type="tel"],
+.fieldset input[type="email"] {
   border: none;
   padding: 15px;
-  outline:0;
-  border-bottom: 2px solid #000;
+  outline: 0;
+  border-bottom: 2px solid #000000;
 }
 
-.fieldset input[type=text]:focus,
-.fieldset input[type=tel]:focus,
-.fieldset input[type=email]:focus {
+.fieldset input[type="text"]:focus,
+.fieldset input[type="tel"]:focus,
+.fieldset input[type="email"]:focus {
   border-bottom: 2px solid #62d1ba;
 }
 
