--- a/source/sass/blocks/manufacturing.scss
+++ b/source/sass/blocks/manufacturing.scss
@@ -5,13 +5,17 @@
 .manufacturing__title {
   text-align: left;
   font-size: 17px;
-  width: 40%;
+  margin: 20px 0 20px 90px;
 }
 
 .manufacturing__description {
-  padding: 30px;
+  padding: 25px 33px;
+  font-size: 13px;
+  line-height: 1.9;
 }
 
 .manufacturing__btn {
-  margin: 30px;
+  font-size: 17px;
+  margin: 0 33px 30px;
+  padding: 12px 0;
 }
