--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,8 +1,10 @@
 .main {
   font-weight: 400;
 }
+
 .main__site-theme {
-  background-color: #fff;
+  background-color: #ffffff;
+  margin-bottom: 79px;
 }
 
 .main__title {
