--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -1,16 +1,89 @@
 .category {
-  color: #ffffff;
+  color: white;
 }
 
 .category__item {
-  padding: 28px 150px 28px 30px;
+  padding: 26px 150px 27px 30px;
   font-weight: 700;
+  position: relative;
+  display: block;
+  color: #ffffff;
+}
+
+.category__item p {
+  width: 150px;
 }
 
 .category__item--01 {
-  background-color: #66cccc;
+  background-color: $seafoam-blue;
 }
 
 .category__item--02 {
-  background-color: #66cc99;
+  background-color: $aqua-marine;
+}
+
+.category__item--01::before {
+  content: "";
+  top: 22px;
+  right: 37px;
+  width: 40px;
+  height: 62px;
+  position: absolute;
+  background: url("../img/icon-interior.svg"), no-repeat;
+  opacity: 0.5;
+}
+
+.category__item--02::before {
+  content: "";
+  top: 22px;
+  right: 27px;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  background: url("../img/icon-toy.svg"), no-repeat;
+  opacity: 0.5;
+}
+
+.category__item--01:hover,
+.category__item--01:focus {
+  background-color: $seafoam-blue-two;
+  box-shadow: 0 0 0 5px $seafoam-blue-two;
+  z-index: 1;
+}
+
+.category__item--02:hover,
+.category__item--02:focus {
+  background-color: $aqua-marine-two;
+  box-shadow: 0 0 0 5px $aqua-marine-two;
+  z-index: 1;
+}
+
+.category__item--01:hover::before,
+.category__item--01:focus::before {
+  opacity: 0.7;
+}
+
+.category__item--02:hover::before,
+.category__item--02:focus::before {
+  opacity: 0.7;
+}
+
+.category__item--01:active {
+  background-color: $seafoam-blue-two;
+  box-shadow: 0 0 0 5px $seafoam-blue-two;
+  color: $light-text-two;
+}
+
+.category__item--02:active {
+  background-color: $aqua-marine-two;
+  box-shadow: 0 0 0 5px $aqua-marine-two;
+  color: $light-text-two;
+}
+
+.category__item--01:active::before {
+  opacity: 0.3;
+}
+
+.category__item--02:active::before {
+  opacity: 0.3;
 }
