--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,4 @@
-.contacts {
+.contacts__description {
   padding: 30px;
 }
 
@@ -7,12 +7,22 @@
 }
 
 .contacts__table {
-  font-size: 13px;
+  font-size: 14px;
   text-align: left;
   margin: 42px 0;
+  line-height: 2.2;
 }
 
 .contacts__table th {
   font-weight: 400;
   width: 30%;
+  padding-bottom: 30px;
+}
+
+.contacts__table tr {
+  vertical-align: top;
+}
+
+.contacts div {
+  padding: 30px;
 }
