--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,6 +1,6 @@
-.feedback {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.feedback__title {
+  font-size: 25px;
+  padding: 5px 0 21px;
 }
 
 .feedback__comment {
@@ -9,18 +9,29 @@
 }
 
 .feedback__comment p {
-  line-height: 27px;
+  line-height: 2;
+  font-size: 15px;
+  margin-bottom: 25px;
 }
 
 .feedback__comment b {
   display: block;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 5px;
 }
 
-.feedback__btn {
+.container-btn {
+  margin-bottom: 37px;
+  padding: 11px 0;
+}
+
+.feedback__arrow {
   width: 50%;
   height: 52px;
   border: 1px solid #ececec;
   font-size: 0;
+  background-color: #ffffff;
+}
+
+.feedback__btn {
+  padding: 11px 0;
 }
