--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -1,6 +1,7 @@
 .fieldset {
   border: none;
   margin-bottom: 20px;
+  padding: 0;
 }
 
 .fieldset-legend {
@@ -8,23 +9,26 @@
   font-weight: 700;
   color: #63d1bb;
   font-size: 17px;
+  margin-bottom: 13px;
 }
 
-.fieldset label {
+.form__lbl-checbx,
+.form__lbl-radio {
+  line-height: 1.2;
   font-weight: 700;
-  margin: 15px 0;
-  width: 100%;
+  margin: 18px 0;
   display: block;
 }
 
-.form__lbl-checbx {
-  padding-left: 64px;
+.form__label {
+  margin: 5px 0;
 }
 
 .fieldset input[type="text"],
 .fieldset input[type="tel"],
 .fieldset input[type="email"] {
   border: none;
+  margin-bottom: 15px;
   padding: 15px;
   outline: 0;
   border-bottom: 2px solid #000000;
@@ -38,4 +42,13 @@
 
 .fieldset textarea {
   height: 142px;
+}
+
+.form__label {
+  margin: 15px 0;
+}
+
+.fieldset-legend--tel,
+.fieldset-legend--email {
+  margin: 0;
 }
