--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -8,9 +8,9 @@
 
 .main__title {
   background-color: #f1f1f1;
-  padding: 50px 30px;
+  padding: 65px 30px 70px;
   margin: 0;
-  font-size: 25px;
+  font-size: 27px;
   text-align: center;
 }
 
