--- a/source/sass/category.scss
+++ b/source/sass/category.scss
@@ -8,12 +8,13 @@
   width: 100%;
   height: 80px;
   margin-right: 100px;
+  letter-spacing: normal;
 }
 
 .category__item--01 {
-  background-color: #66cccc;
+  background-color: $seafoam-blue;
 }
 
 .category__item--02 {
-  background-color: #66cc99;
+  background-color: $aqua-marine;
 }
