--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
@@ -23,4 +23,18 @@ img {
 p {
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+:focus {
+  outline: none;
 }
