--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -1,11 +1,27 @@
+.popup-wrapper {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+
+  @media (min-width: $tablet-width) {
+    backdrop-filter: blur(10px);
+  }
+}
+
 .popup {
+  position: fixed;
+  z-index: 999;
+  top: calc(50% - 213px);
+  left: calc(50% - 50px);
   min-height: 340px;
-  width: 0 auto;
-  background-color: #ffffaa;
+  width: auto;
+  background-color: #ffffff;
   padding: 30px;
   text-align: center;
-  backdrop-filter: blur(10px);
-  // -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(68, 68, 68, 0.1);
+  box-shadow: 0px 5px 10px 0 rgba(0, 1, 1, 0.25);
 }
 
 .popup__title {
@@ -49,14 +65,14 @@
   color: $greyish-brown;
   padding: 10px 19px;
   margin: 5px;
-  border: 1px solid grey;
+  border: 2px solid rgba(68, 68, 68, 0.1);
 }
 
 .popup__label:hover,
 .popup__label:focus {
-  border: 1px solid blue;
+  border: 2px solid rgba(68, 68, 68, 0.3);
 }
 
 .popup__checkbox:checked + .popup__label {
-  border: 1px solid red;
+  border: 2px solid $seafoam-blue;
 }
