--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -8,6 +8,12 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   background-color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 
 a {
