--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -1,8 +1,40 @@
 .header__nav li {
   margin: 0;
   border-bottom: 2px solid #ececec;
+
   @media (min-width: $tablet-width) {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 17px;
+    line-height: 1.41;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.header__nav--client,
+.header__nav--site {
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+    font-size: 15px;
+  }
+}
+
+.header__nav--site {
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 70px;
+    padding: 0;
+  }
+}
+
+.header__nav--site .nav__item {
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
   }
 }
