--- a/source/sass/blocks/logo-wrapper.scss
+++ b/source/sass/blocks/logo-wrapper.scss
@@ -4,4 +4,10 @@
   width: 100%;
   text-align: center;
   border-bottom: 2px solid #ececec;
+
+  @media (min-width: $tablet-width) {
+    align-content: flex-start;
+    text-align: left;
+    position: relative;
+  }
 }
