--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -8,6 +8,10 @@
   padding: 0;
   font-weight: 700;
   margin-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    column-count: 2;
+  }
 }
 
 .features__list li {
@@ -16,6 +20,12 @@
   position: relative;
 }
 
+.features__item {
+
+  @media (min-width: $tablet-width) {
+    width: 60%;
+  }
+}
 .features__item--eko::after {
   content: "";
   position: absolute;
