--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,9 +1,35 @@
+.contacts {
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    margin: 52px;
+  }
+}
+
+.contacts img {
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+  }
+}
+
 .contacts__description {
   padding: 30px;
 }
 
 .contacts__title {
   font-size: 18px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+  }
+}
+
+.contacts__table-wrapper {
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
 }
 
 .contacts__table {
@@ -11,12 +37,20 @@
   text-align: left;
   margin: 42px 0;
   line-height: 2.2;
+
+  @media (min-width: $tablet-width) {
+    width: 50%;
+  }
 }
 
 .contacts__table th {
   font-weight: 400;
   width: 30%;
   padding-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    width: 25%;
+  }
 }
 
 .contacts__table tr {
@@ -25,4 +59,18 @@
 
 .contacts div {
   padding: 30px;
+}
+
+.contacts__table-link a {
+
+  @media (min-width: $tablet-width) {
+    border-bottom: 1px dotted green;
+  }
+}
+
+.contacts__btn {
+
+  @media (min-width: $tablet-width) {
+    padding: 10px 0;
+  }
 }
