--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -7,6 +7,7 @@
     line-height: 1.41;
     display: flex;
     flex-wrap: wrap;
+    align-content: center;
     padding: 0;
     margin: 0;
   }
@@ -17,18 +18,24 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
-    flex-wrap: wrap;
     flex-shrink: 0;
     font-size: 15px;
   }
 }
 
+.header__nav--client li {
+
+  @media (min-width: $tablet-width) {
+  border-left: 1px solid red;
+  }
+}
 .header__nav--site {
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 70px;
+    top: 80px;
     padding: 0;
+    z-index: 1;
   }
 }
 
@@ -36,5 +43,14 @@
 
   @media (min-width: $tablet-width) {
     padding: 0;
+    font-size: 15px;
+    text-align: center;
+  }
+}
+
+.nav__item--search {
+
+  @media (min-width: $tablet-width) {
+    font-size: 0;
   }
 }
