--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -21,7 +21,7 @@
   padding: 30px;
   text-align: center;
   border: 1px solid rgba(68, 68, 68, 0.1);
-  box-shadow: 0px 5px 10px 0 rgba(0, 1, 1, 0.25);
+  box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
 }
 
 .popup__title {
