--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,5 +1,9 @@
 .main {
   font-weight: 400;
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .main__site-theme {
@@ -7,6 +11,10 @@
 
   @media (min-width: $tablet-width) {
     position: relative;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 746px;
   }
 }
 
@@ -16,9 +24,32 @@
   margin: 0;
   font-size: 27px;
   text-align: center;
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+  }
+}
+
+.main__category {
+  @media (min-width: $tablet-width) {
+    margin-top: -50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -120px;
+  }
 }
 
 .main__manufacturing {
   font-size: 15px;
   margin: 30px 30px 30px 30px;
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    margin: 50px;
+  }
+}
+
+.main__catalog {
+  width: 100%;
 }
