--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,12 +1,17 @@
 .product {
   padding: 30px;
   padding-top: 25px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     padding: 3.25em;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 50px 50px 50px 225px;
   }
 }
 
@@ -15,6 +20,13 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-content: center;
+    margin-left: -150px;
   }
 }
 
@@ -25,6 +37,10 @@
 
   @media (min-width: $tablet-width) {
     font-size: 43px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
   }
 }
 
@@ -39,6 +55,12 @@
     font-size: 17px;
     width: 70px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 75px;
+    line-height: 1.1em;
+    align-self: center;
+  }
 }
 
 .product__description {
@@ -48,6 +70,10 @@
 
   @media (min-width: $tablet-width) {
     align-self: flex-start;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 282px;
   }
 }
 
@@ -72,8 +98,12 @@
 
 .product__table th {
   width: 36%;
-  text-align: left;
-  font-weight: 400;
+  padding-right: 30px;
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    font-weight: 400;
+  }
 }
 
 .product__img {
@@ -85,6 +115,13 @@
     align-self: flex-end;
     margin-top: -300px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 53%;
+    z-index: -1;
+    margin-top: -450px;
+    margin-left: 30px;
+  }
 }
 
 .product__price {
@@ -94,6 +131,10 @@
 
   @media (min-width: $tablet-width) {
     width: 40%;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 50px;
   }
 }
 
