--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,6 @@
 $tablet-width: 768px;
-$desktop-width: 1200px;
-$back-fon: #ffffff;
+$desktop-width: 1150px;
+$back-bg: #ffffff;
 $seafoam-blue: #63d1bb;
 $seafoam-blue-two: #59d5bc;
 $aqua-marine: #56c3b2;
