--- a/source/sass/blocks/site-theme.scss
+++ b/source/sass/blocks/site-theme.scss
@@ -43,6 +43,17 @@
 .site-theme {
   padding: 70px 20px 122px;
   background: url("../img/hero-mobile@1x.jpg") no-repeat #dddddd;
+  background-position: center;
+
+  @media (min-width: $tablet-width) {
+    background: url("../img/hero-tablet@1x.jpg") no-repeat #dddddd;
+    background-position: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    background: url("../img/hero-desktop@1x.jpg") no-repeat #dddddd;
+    background-position: center;
+  }
 }
 
 .site__themes {
