dscnfbdftv gj ctnrt

--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -19,6 +19,10 @@
   @media (min-width: $tablet-width) {
     flex-grow: 1;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 1150px;
+  }
 }
 
 .category__item p {
