--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -15,6 +15,8 @@
 
   @media (min-width: $desktop-width) {
     height: 746px;
+    width: 1150px;
+    margin: auto;
   }
 }
 
@@ -36,6 +38,8 @@
   }
 
   @media (min-width: $desktop-width) {
+    width: 1150px;
+    margin: auto;
     margin-top: -120px;
   }
 }
@@ -52,4 +56,12 @@
 
 .main__catalog {
   width: 100%;
+}
+
+.product,
+.about-us {
+  @media (min-width: $desktop-width) {
+    width: 1150px;
+    margin: auto;
+  }
 }
