--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -46,7 +46,7 @@
   height: 50px;
   top: 10px;
   left: 10px;
-  background-image: url("../img/icon-feature-gift.svg"), no-repeat;
+  background-image: url("../img/icon-feature-gift.svg");
 }
 
 .features__item--suomi::after {
