--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -15,6 +15,8 @@
 
 .header__nav--client,
 .header__nav--site {
+  display: none;
+
   @media (min-width: $tablet-width) {
     display: flex;
     flex-shrink: 0;
