--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -21,7 +21,7 @@
 }
 
 .main__title {
-  background-color: #f1f1f1;
+  background-color: $light-grey-bg;
   padding: 65px 30px 70px;
   margin: 0;
   font-size: 27px;
@@ -33,6 +33,8 @@
 }
 
 .main__category {
+  margin-top: -90px;
+
   @media (min-width: $tablet-width) {
     margin-top: -50px;
   }
