--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,3 +8,4 @@ $aqua-marine-two: #46c1ae;
 $light-text: #ffffff;
 $light-text-two: rgba(255, 255, 255, 0.3);
 $greyish-brown: #444444;
+$light-grey-bg: #f1f1f1;
