--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -56,7 +56,7 @@
   height: 50px;
   top: 10px;
   left: 10px;
-  background-image: url("../img/icon-feature-gift.svg"), no-repeat;
+  background-image: url("../img/icon-feature-flower.svg");
 }
 
 .features__item--likes::after {
