--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -6,6 +6,12 @@
     display: flex;
     justify-content: center;
     height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: $desktop-width) {
   }
 }
 
