--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,4 @@
 @import "blocks/feedback.scss";
 @import "blocks/container-btn.scss";
 @import "blocks/contacts.scss";
+@import "blocks/icon-sprites.scss";
