--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -16,7 +16,7 @@
 }
 
 .category__item {
-  padding: 26px 150px 27px 30px;
+  padding: 24px 150px 29px 30px;
   font-weight: 700;
   position: relative;
   display: block;
@@ -33,6 +33,7 @@
 
 .category__item p {
   width: 150px;
+  letter-spacing: 0.1em;
 }
 
 .category__item--01 {
@@ -46,7 +47,7 @@
 .category__item--01::before {
   content: "";
   top: 22px;
-  right: 37px;
+  right: 55px;
   width: 40px;
   height: 62px;
   position: absolute;
@@ -56,8 +57,8 @@
 
 .category__item--02::before {
   content: "";
-  top: 22px;
-  right: 27px;
+  top: 20px;
+  right: 47px;
   width: 60px;
   height: 60px;
   position: absolute;
@@ -69,15 +70,16 @@
 .category__item--01:focus {
   background-color: $seafoam-blue-two;
   // box-shadow: 0 0 0 5px ;
-  border-bottom: 5px solid $seafoam-blue-two;
+  box-shadow: inset 0 0 4px  $seafoam-blue-two;
   z-index: 1;
   margin-top: -5px;
+  padding: 19px 150px 34px 30px;
 }
 
 .category__item--02:hover,
 .category__item--02:focus {
   background-color: $aqua-marine-two;
-  border-bottom: 5px solid $aqua-marine-two;
+  border-bottom: 5px solid  $aqua-marine-two;
   z-index: 1;
   margin-top: -5px;
 }
