--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -36,8 +36,8 @@
 .header__btn-burger {
   position: absolute;
   display: block;
-  top: 25px;
-  right: 25px;
+  top: 27px;
+  right: 41px;
   width: 25px;
   height: 25px;
   font-size: 0;
@@ -111,13 +111,13 @@
 }
 
 .header__nav--opened .header__btn-burger {
-  top: 0;
-  right: 0;
+  top: 27px;
+  right: 41px;
 
   &::before,
   &::after {
-    top: 30px;
-    right: 30px;
+    top: 0px;
+    right: 13px;
     content: "";
     position: absolute;
     width: 3px;
@@ -188,4 +188,12 @@
     box-sizing: border-box;
     text-decoration: none;
   }
+}
+
+.header__link:hover {
+  color: $bg-60;
+}
+
+.header__link:active {
+  color: $bg-30;
 }
