--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -67,7 +67,7 @@
 .product__description {
   font-size: 15px;
   font-weight: 400;
-  padding: 20px 0;
+  padding: 22px 0;
   line-height: 1.6em;
 
   @media (min-width: $tablet-width) {
@@ -111,6 +111,7 @@
 
 .product__img {
   margin-top: 26px;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     order: 1;
