--- a/source/sass/blocks/site-theme.scss
+++ b/source/sass/blocks/site-theme.scss
@@ -43,7 +43,7 @@
 
 .site-theme {
   padding: 0;
-  height: auto;
+  height: 373px;
   background: url("../img/hero-mobile@1x.jpg") no-repeat $light-grey-bg;
   background-position: center -20px;
 
