--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,3 +9,5 @@ $light-text: #ffffff;
 $light-text-two: rgba(255, 255, 255, 0.3);
 $greyish-brown: #444444;
 $light-grey-bg: #f1f1f1;
+$bg-60: rgba(0, 0, 0, 0.6);
+$bg-30: rgba(0, 0, 0, 0.3);
