--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -51,7 +51,7 @@
 }
 
 .contacts__table-wrapper {
-  padding: 30px;
+  padding: 30px 0;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -65,11 +65,13 @@
 .contacts__table {
   font-size: 14px;
   text-align: left;
-  margin: 42px 0;
   line-height: 2.2;
+  margin: auto;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     width: 50%;
+  margin: 42px 0;
   }
 }
 
