--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -34,7 +34,7 @@
   margin-bottom: 30px;
 }
 
-.pupup__form {
+.popup__form {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
