--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -1,11 +1,34 @@
 .fieldset {
   border: none;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
 
   @media (min-width: $tablet-width) {
     display: flex;
-    width: auto;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+  }
+}
+
+.fieldset__container--checbx {
+  margin: 46px 0;
+
+  @media (min-width: $tablet-width) {
+    width: 35%;
+    margin: 66px 0;
+    padding-left: 203px;
+    padding-right: 117px;
+    box-sizing: border-box;
+  }
+}
+
+
+.fieldset__wrapper {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 66px;
   }
 }
 
@@ -16,24 +39,10 @@
   font-size: 17px;
   margin-bottom: 13px;
 
-  @media (min-width: $desktop-width) {
-    position: absolute;
-  }
-}
-
-.form__lbl-checbx,
-.form__lbl-radio {
-  line-height: 1.2;
-  font-weight: 700;
-  margin: 18px 0;
-  display: block;
-}
-
-.form__label {
-  margin: 5px 0;
-
   @media (min-width: $tablet-width) {
-    margin: 15px 0;
+    position: absolute;
+    top: 69px;
+    left: 52px;
   }
 }
 
