--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Tahoma", sans-serif;
   src: local("Open Sans Light"),
     local("OpenSansLight"),
     local("OpenSans-Light"),
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Tahoma", sans-serif;
   src: local("Open Sans Regular"),
     local("OpenSansRegular"),
     local("OpenSans-Regular"),
@@ -27,7 +27,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Tahoma", sans-serif;
   src: local("Open Sans Bold"),
     local("OpenSansBold"),
     local("OpenSans-Bold"),
