--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Tahoma", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 17px;
